added about me page

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@ title: Home
 	<li><h3>{{ post.title }}</h3><p>{% if post.summary %}{{ post.summary }}{% else %}{{ post.title }}{% endif %}</p></li>
 	{% endif %}
 	{% endfor %}
+	<li><p>My digital résumé</p></li>
+	<li><p>My best attempt at summarizing what keeps me ticking. </p></li>
   </ul>
 
