--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@ title: Home
   <ul class="summary">
 	{% for post in site.posts %}
 	{% if post.tags contains 'test' %}
+	{% elsif post.tags contains 'hidden' %}
 	{% else %}
 	<li><a href="{{post.url}}" title="{{post.title}}" ><h3>{{ post.title }}</h3></a><p>{% if post.summary %}{{ post.summary }}{% else %}{{ post.title }}{% endif %}</p></li>
 	{% endif %}
 	{% endfor %}
-	<li><a href="/jon-beebe-resume.html" title="Jon Beebe's Resume" ><h3>Résumé</h3></a><p>My digital résumé</p></li>
-	<li><a href="/about-jon-beebe.html" title="About Jon Beebe" ><h3>About Jon Beebe</h3></a><p>My best attempt at summarizing what keeps me ticking. </p></li>
+	<li><a href="/jon-beebe-resume.html" title="Jon Beebe's Resume" ><h3>Résumé</h3></a><p>Jon Beebe's digital résumé</p></li>
+	<li><a href="/about-jon-beebe.html" title="About Jon Beebe" ><h3>About Jon Beebe</h3></a><p>Jon Beebe's best attempt at summarizing what keeps him ticking. </p></li>
   </ul>
 
