Migrated blog to Roon.io, cleaned up a bit

--- a/projects/game-layer.html
+++ b/projects/game-layer.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Jon Beebe">
 		
-		<title>Title</title>
+		
+
+		
+		
+			<title>The Game Layer</title>
+		
+
 		<link rel="stylesheet" media="all" href="/assets/vendor/bootstrap/css/bootstrap.css"/>
 		<link rel="stylesheet" media="all" href="/assets/styles/styles.css"/>
 		
@@ -21,9 +26,9 @@
 	
     <div class="container-fluid">
 				<div class="hero hero-me">
-		<h1 class="strong"><a href="/blog/index.html" title="Most everyone calls me Jon, except my family&hellip;they still call be Jonathan">Jon(athan) Beebe</a></h1>
+		<h1 class="strong"><a href="/about-jon-beebe.html" title="Most everyone calls me Jon, except my family&hellip;they still call be Jonathan">Jon(athan) Beebe</a></h1>
 		<div>
-			<a href="/blog/index.html" title="Jon Beebe's Blog">blog</a> &bull;
+			<a href="http://bejonbee.roon.io/" title="Jon Beebe's Blog">blog</a> &bull;
 			<a href="/about-jon-beebe.html" title="About Jon Beebe">about</a> &bull;
 			<a href="/jon-beebe-resume.html" title="Jon Beebe's Resume">résumé</a> &bull;
 			<a href="http://www.beebeography.com" title="Jon Beebe's Photo Gallery">photography</a> &bull;
