--- a/projects/website-creation.html
+++ b/projects/website-creation.html
@@ -28,7 +28,7 @@
 				<div class="hero hero-me">
 		<h1 class="strong"><a href="/about-jon-beebe.html" title="Most everyone calls me Jon, except my family&hellip;they still call be Jonathan">Jon(athan) Beebe</a></h1>
 		<div>
-			<a href="http://bejonbee.roon.io/" title="Jon Beebe's Blog">blog</a> &bull;
+			<a href="http://codepen.io/somethingkindawierd/blog" title="Jon Beebe's Blog">blog</a> &bull;
 			<a href="/about-jon-beebe.html" title="About Jon Beebe">about</a> &bull;
 			<a href="/jon-beebe-resume.html" title="Jon Beebe's Resume">résumé</a> &bull;
 			<a href="http://www.beebeography.com" title="Jon Beebe's Photo Gallery">photography</a> &bull;
