Refined intro/outro of native js presentation

--- a/presentations/native-javascript/presentation/index.html
+++ b/presentations/native-javascript/presentation/index.html
@@ -48,7 +48,7 @@
 			<section data-markdown>
 				<script type="text/template">
 					# Native JavaScript
-					## A discussion about JavaScriptCore
+					## A discussion about JavaScriptCore & Swift
 
 					Presented by Jon Beebe([@bejonbee](http://twitter.com/bejonbee))<br>
 					iOS developer at Ramsey Solutions
@@ -280,31 +280,32 @@
 
 					# Further Study
 
-					<dl>
-						<dt><dfn>Read The Source, Luke</dfn></dt>
-						<dd>[Source/JavaScriptCore/API/*](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API)</dd>
-						<dt><dfn>JSContext</dfn></dt>
-						<dd>The JavaScript execution environment. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSContext.h)</dd>
-						<dt><dfn>JSExport</dfn></dt>
-						<dd>Export native objects & classes to JavaScript. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSExport.h)</dd>
-						<dt><dfn>JSValue</dfn></dt>
-						<dd>A reference to a JavaScript value, with strong reference to originating JSContext. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSValue.h)</dd>
-						<dt><dfn>JSManagedValue</dfn></dt>
-						<dd>Kinda like a weak JSValue referenece. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSManagedValue.h)</dd>
-						<dt><dfn>JSVirtualMachine</dfn></dt>
-						<dd>Represents a single JavaScript “object space” or set of execution resources. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSVirtualMachine.h)</dd>
-					</dl>
+					<small>
+						<dl>
+							<dt><dfn>Read The Source, Luke</dfn></dt>
+							<dd>[Source/JavaScriptCore/API/*](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API)</dd>
+							<dt><dfn>JSContext</dfn></dt>
+							<dd>The JavaScript execution environment. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSContext.h)</dd>
+							<dt><dfn>JSExport</dfn></dt>
+							<dd>Export native objects & classes to JavaScript. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSExport.h)</dd>
+							<dt><dfn>JSValue</dfn></dt>
+							<dd>A reference to a JavaScript value, with strong reference to originating JSContext. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSValue.h)</dd>
+							<dt><dfn>JSManagedValue</dfn></dt>
+							<dd>Kinda like a weak JSValue referenece. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSManagedValue.h)</dd>
+							<dt><dfn>JSVirtualMachine</dfn></dt>
+							<dd>Represents a single JavaScript “object space” or set of execution resources. [[↗]](http://trac.webkit.org/browser/trunk/Source/JavaScriptCore/API/JSVirtualMachine.h)</dd>
+						</dl>
+					<small>
 
 					---
 
 					# Thank You
 
-					Slides & Xcode Swift playground available on [github](https://github.com/somethingkindawierd/Native-JavaScript-Presentation).
+					Slideshow viewable on [github](http://somethingkindawierd.com/presentations/native-javascript/presentation/index.html).
+
+					Source & Xcode Swift playground freely available on [github](https://github.com/somethingkindawierd/Native-JavaScript-Presentation).
 
 					[@bejonbee](http://twitter.com/bejonbee) on Twitter
-
-					---
-
 
 				</script>
 			</section>
