Fixed link to native js pres github repo

--- a/presentations/native-javascript/presentation/index.html
+++ b/presentations/native-javascript/presentation/index.html
@@ -303,7 +303,7 @@
 
 					Slideshow viewable on [github](http://somethingkindawierd.com/presentations/native-javascript/presentation/index.html).
 
-					Source & Xcode Swift playground freely available on [github](https://github.com/somethingkindawierd/Native-JavaScript-Presentation).
+					Source & Xcode Swift playground freely available on [github](https://github.com/somethingkindawierd/somethingkindawierd.github.com/tree/master/presentations/native-javascript).
 
 					[@bejonbee](http://twitter.com/bejonbee) on Twitter
 
