Refined native javascript slides

--- a/presentations/native-javascript/presentation/index.html
+++ b/presentations/native-javascript/presentation/index.html
@@ -322,6 +322,18 @@
 
 					---
 
+					# Further Study
+
+					<small>
+					- [WebKit wiki on JavaScriptCore](https://trac.webkit.org/wiki/JavaScriptCore)
+					- [Introducing WebKit FTL](https://www.webkit.org/blog/3362/introducing-the-webkit-ftl-jit/)
+					- [FTL: WebKit’s LLVM based JIT](http://blog.llvm.org/2014/07/ftl-webkits-llvm-based-jit.html)
+					- [Profiling JavaScript in JavaScriptCore](http://somethingkindawierd.com/2015/10/profiling-javascript-in-javascriptcore/)
+					- [NativeScript runtime source code](https://github.com/NativeScript/ios-runtime)
+					<small>
+
+					---
+
 					# Thank You
 
 					Slideshow viewable on [github](http://somethingkindawierd.com/presentations/native-javascript/presentation/index.html).
