Slight improvements to presentation

--- a/presentations/native-javascript/presentation/index.html
+++ b/presentations/native-javascript/presentation/index.html
@@ -61,17 +61,17 @@
 					## A discussion about JavaScriptCore & Swift
 
 					Presented by Jon Beebe([@bejonbee](http://twitter.com/bejonbee))<br>
-					iOS developer at Ramsey Solutions
+					[EveryDollar](https://www.everydollar.com) iOS developer at [Ramsey Solutions](http://www.developwithpurpose.com)
 
 					---
 
 					# This is my (!Node)vember talk
 
-					*because*
+					*because Node stands on the shoulders of*
 
-					Node ← V8 ← Chrome ← Google
+					V8 ← Chrome ← Google
 
-					*competes with*
+					*which competes with*
 
 					JavaScriptCore ← WebKit ← Apple
 
@@ -81,16 +81,12 @@
 
 					---
 
-					It really started to get interesting after 2008
-
-					---
-
 					# Why should you care?
 
 					- Enables rapid prototyping.
 					- Highly customizable runtime.
 					- Leverage the many diverse open source js libs.
-					- And…
+					- And because…
 
 					---
 
@@ -107,20 +103,11 @@
 					You already have a JavaScriptCore REPL on your Mac.
 
 					```bash
-					/System/Library/Frameworks/JavaScriptCore.framework/¬
-					Versions/A/Resources/jsc
-					```
-
-					*[Learn more](http://somethingkindawierd.com/2015/09/javascriptcore-repl/)*
-
-					---
-
-					# REPL
-
-					```bash
 					ln -s /System/Library/Frameworks/JavaScriptCore.framework/¬
 					Versions/A/Resources/jsc /usr/local/bin/jsc
 					```
+
+					*[Learn more](http://somethingkindawierd.com/2015/09/javascriptcore-repl/)*
 
 					---
 
