Refinements to presentation

--- a/presentations/native-javascript/presentation/index.html
+++ b/presentations/native-javascript/presentation/index.html
@@ -81,7 +81,13 @@
 
 					---
 
-					JavaScriptCore — The WebKit JavaScript engine
+					# Purpose of This Presentation
+
+					To pique your interest in JavaScriptCore & leveraging js within native iOS & OS X apps.
+
+					---
+
+					**JavaScriptCore** — The WebKit JavaScript engine
 
 					---
 
@@ -111,7 +117,7 @@
 					Versions/A/Resources/jsc /usr/local/bin/jsc
 					```
 
-					*[Learn more](http://somethingkindawierd.com/2015/09/javascriptcore-repl/)*
+					*Learn more: [bit.ly/jsc-repl](http://somethingkindawierd.com/2015/09/javascriptcore-repl/)*
 
 					---
 
@@ -126,6 +132,8 @@
 					>>> JSON.stringify(pt)
 					{"x":10,"y":20}
 					```
+
+					*Learn more: [bit.ly/jsc-repl](http://somethingkindawierd.com/2015/09/javascriptcore-repl/)*
 
 					---
 
