Added link to presentation playground

--- a/presentations/native-javascript/presentation/index.html
+++ b/presentations/native-javascript/presentation/index.html
@@ -149,6 +149,8 @@
 					Let’s explore JavaScriptCore with<br>
 					Swift in an Xcode playground…
 
+					<small>[available on github ↗](https://github.com/somethingkindawierd/somethingkindawierd.github.com/tree/master/presentations/native-javascript)
+
 					---
 
 					# Compilation Process
